<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GoClock</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="time_over">Time Over</string>
	<string name="tap_to_start">Tap to Start</string>
	<string name="periods_left">Periods Left</string>
	<string name="stones_left">Stones Left</string>
	<string name="byoyomi">Byo-Yomi</string>
	<string name="byoyomi_summary">Time until a stone is placed.</string>
	<string name="periods">Periods</string>
	<string name="extra_time">Extra time</string>
	<string name="main_time">Main Time</string>
	<string name="main_time_summary">Main time in seconds.</string>
	<string name="set">Set</string>
	<string name="cancel">Cancel</string>
	<string name="time_rule_to_use">Time rule to use</string>
	<string name="timerule">Time Rule</string>
	<string name="canadian">Canadian</string>
	<string name="rules">Rules</string>
	<string name="reset_clock">Reset Clock</string>
	<string name="stones">Stones</string>
	<string name="absolute">Absolute</string>
	<string name="general">General</string>
	<string name="fullscreen_mode">Fullscreen mode</string>
	<string name="fullscreen_summary_on">Fullscreen on</string>
	<string name="fullscreen_summary_off">Fullscreen off</string>
	<string name="keep_screen_on">Keep screen on</string>
	<string name="keep_screen_on_summary_on">Clock screen always on.</string>
	<string name="keep_screen_on_summary_off">Clock screen always off.</string>
	<string name="blink_on_sudden_death">Blink on alert</string>
	<string name="blink_on_sd_summary">Blink on alert.</string>
	<string name="beep_on_sudden_death_summary">Play a beep sound on alert.</string>
	<string name="beep_on_sudden_death">Beep on alert</string>
	<string name="button_sound_on_tap">Button sound on tap</string>
	<string name="button_sound_on_tap_summary">Play a push button sound when tapping the clock.</string>
	<string name="use_preset">Presets</string>
	<string name="new_preset_added">New preset from current time rule added.</string>
	<string name="add_new_preset_dialog_title">Preset from current settings</string>
	<string name="add_new_preset_dialog_description">The values of the new preset will be taken from your current settings.</string>
	<string name="add">Add</string>
	<string name="new_preset_name">New preset name</string>
	<string name="preset_name_already_taken">Preset name already taken.</string>
	<string name="error">Error</string>
	<string name="name_cannot_be_empty">Name cannot be empty.</string>
	<string name="pause_clock">Pause Clock</string>
	<string name="delete">Delete</string>
	<string name="delete_success">Deleted with success!</string>
	<string name="presets_listactivity_label">Presets</string>
	<string name="cancel">Cancel</string>
	<string name="settings">Settings</string>
	<string name="first_to_play_title">Black is first to play</string>
	<string name="byoyomi_alert_title">Byo-Yomi Alert</string>
	<string name="byoyomi_alert_summary">Alert starts %s before the end of the period.</string>
	<string name="canadian_alert_title">Canadian Alert</string>
	<string name="canadian_alert_summary">Alert starts with %.2f seconds per stone.</string>
	<string name="alerts_title">Alerts</string>
	<string name="beep_on_transition">Beep on transition</string>
	<string name="beep_on_transition_summary">Beep on time transitions, such as when the main time or a byo-yomi period is over.</string>
</resources>
