<menu xmlns:android="http://schemas.android.com/apk/res/android" >

	<item
	    android:id="@+id/action_pause_clock"
	    android:orderInCategory="0"
	    android:showAsAction="ifRoom"
	    android:icon="@android:drawable/ic_media_pause"
	    android:title="@string/pause_clock"/>
	<item
	    android:id="@+id/action_reset_clock"
	    android:orderInCategory="1"
	    android:showAsAction="ifRoom"
	    android:icon="@android:drawable/ic_menu_close_clear_cancel"
	    android:title="@string/reset_clock"/>
	<item
	    android:id="@+id/action_presets"
	    android:orderInCategory="2"
	    android:showAsAction="ifRoom"
	    android:icon="@android:drawable/ic_menu_edit"
	    android:title="@string/use_preset"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="3"
        android:icon="@android:drawable/ic_menu_preferences"
	    android:showAsAction="ifRoom"
        android:title="@string/action_settings"/>
</menu>
